database requisition, response to frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.application.name=jdbc:bookManagement://localhost:5432/bookManagement
-spring.datasource.username = bookManagement
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/book_management
+spring.datasource.username = postgres
 spring.datasource.password = 123123
 
-spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+
+server.port = 9090
+
+access-control-allow-origin = http://localhost:3000/
+
